--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <body>
     <div id="app"></div>
     <div id="redux"></div>
+    <div id="map"></div>
     <script src="bundle.js"></script>
 </body>
 
